--- a/src/components/GradientBtn/index.module.scss
+++ b/src/components/GradientBtn/index.module.scss
@@ -29,7 +29,7 @@
     font-family: var(--font-family-roboto-flex);
     font-weight: 500;
     // font-size: 22px;
-    font-size: clamp(1.1rem, 1.5vw, 1.3rem);
+    font-size: clamp(1rem, 1.5vw, 1.2rem);
     text-transform: uppercase;
     cursor: pointer;
   }
